--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <h2>Oh Yeahhhhh 😏👍</h2>
 
   <!-- MEME 1: Funny thumbs‑up reaction -->
-  <img id="meme1" src="https://media.giphy.com/media/uiMIJMFYgRaAz5Pcb7/giphy.gif" width="250" alt="Funny thumbs up">
+  <img id="meme1" src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExMWJpcmphbHQ1bmNvNG15OXBucDUxeW1nZnBzdDJ5a2h1NW1yYm9kZiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Rik9n81Vda3rzr5F8h/giphy.gif" width="250" alt="Funny thumbs up">
 
   <br><br>
 
