--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <br><br>
 
   <!-- MEME 2: Couple twirling -->
-  <img id="meme2" src="https://giphy.com/gifs/love-fart-eggleam-KX0swolOzQYiuWIuzH" width="250" style="display:none;" alt="Couple twirling">
+  <img id="meme2" src="https://tenor.com/view/cat-by-ednastochi-good-morning-oi-feliz-gif-9804311574812597097" width="250" style="display:none;" alt="Couple twirling">
 </div>
 
 <script>
