--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
   <button id="no" onmouseover="moveNo()">Uhh No 🙄</button>
 
   <div id="meme">
-    <h2>I LOve You Spots😍♾️</h2>
-    <!-- MEME 1: Funny thumbs-up reaction -->
-    <img id="meme1" src="https://media.giphy.com/media/OkJat1YNdoD3W/giphy.gif" width="250" alt="Funny thumbs up">
+    <h2>I Love You Spots😍♾️</h2>
+    <!-- MEME 1: Love You Spotty -->
+    <img id="meme1" src="https://giphy.com/gifs/love-fart-eggleam-KX0swolOzQYiuWIuzH" width="250" alt="Funny">
   </div>
 
   <script>
